# egui-playground

./: Cargo.toml  README.md  flake.nix
docs/: egui_playground.js  egui_playground_bg.wasm  index.html
flake-parts/: default.nix
flake-parts/apps/: default.nix
flake-parts/devshell/: default.nix  pre_commit.nix
flake-parts/lib/: default.nix  egui.nix  rust.nix
src/: app.rs  lib.rs  main.rs
