[package]
name = "egui-playground"
default-run = "egui-playground-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "egui-playground-bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
eframe = { version = "0.18.0", features = ["persistence"] }
egui = "0.18.1"
serde = { version = "1.0.140", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm
